--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -6,10 +6,10 @@
     endif
 %}
 
-<div class="relative bg-white" x-data="{ mobileMenuOpen: false }" >
+<div class="relative bg-white" x-data="{ mobileMenuOpen: false, searchBarOpen: false }" x-cloak>
     <div class="mx-auto px-4 sm:px-6">
         <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
-            <!-- STORE NAME / LOGO -->
+            <!-- STORE NAME / STORE LOGO -->
             <div class="flex justify-start lg:flex-1 truncate">
                 <h1 class="text-xl font-bold truncate">{{ shop.name }}</h1>
             </div>
@@ -21,14 +21,16 @@
             </div>
             <!-- NAVIGATION MENU -->
             <nav class="hidden md:flex space-x-10">
+
                 {% for link in main_menu_linklist %}
                     {% if link.links != blank %}
-                    {% assign link_handle = link.handle | replace: '-', '_' %}
-                        <div class="relative"  x-data="{ {{ link_handle }}: false }">
-                            <button x-on:click="{{ link_handle }} = ! {{ link_handle }}" type="button" class="inline-flex items-center">
+                        {% assign link_handle = link.handle | replace: '-', '_' %}
+                        <div class="relative" x-data="{ {{ link_handle }}: false }">
+                            <button type="button" x-on:click="{{ link_handle }} = ! {{ link_handle }}" class="inline-flex items-center">
                                 {{ link.title }}
                                 {% render 'icon-dropdown' %}
                             </button>
+
                             <div 
                             x-transition:enter="transition ease-out duration-300"
                             x-transition:enter-start="opacity-0 translate-y-3"
@@ -55,11 +57,13 @@
                     {% else %}
                         <a href="{{ link.url }}" class="text-base text-gray-500 hover:text-gray-900">{{ link.title }}</a>
                     {% endif %}
-                    
                 {% endfor %}
             </nav>
             <!-- CART BUTTON / ACCOUNT LINKS IF ENABLED -->
             <div class="hidden md:flex items-center justify-end md:flex-1 space-x-5">
+                <button x-on:click="searchBarOpen = true" type="button" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
+                    {% render 'icon-search' %}
+                </button>
                 <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
                     {% render 'icon-shopping-bag' %}
                 </a>
@@ -67,7 +71,7 @@
                 {% if shop.customer_accounts_enabled %}
                     {% if customer %}
                         <a href="{{ routes.account_url }}" class="text-base text-gray-500 hover:text-gray-900">account</a>
-                        {{ 'Log out'  | customer_logout_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"' }}
+                        {{ 'Log out' | customer_logout_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"' }}
                     {% else %}
                         {{ 'Log in ' | customer_login_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"' }}
                         {{ 'Register' | customer_register_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"' }}
@@ -126,6 +130,23 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div x-show="searchBarOpen" class="w-full absolute top-0 bg-white border">
+        <button type="button" x-on:click="searchBarOpen = false" class="absolute top-0 right-0 mr-5 mt-5 text-gray-500">
+            {% render 'icon-close' %}
+        </button>
+        <div class="h-40 flex justify-center items-center">
+            <form action="{{ routes.search_url }}" method="get" class="flex-auto">
+                <div class="relative text-gray-500 px-10 border">
+                    <input type="search" name="q" placeholder="Search" class="w-full bg-white h-10 px-5 pr-10 rounded-full text-sm focus:outline-none">
+                    <button type="submit" class="absolute right-0 top-0 mt-2 mr-2 md:mr-20">
+                        {% render 'icon-search' %}
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
